--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,3 +174,7 @@ section.section-show {
     opacity: 1;
     padding-bottom: 45px;
   }
+
+section .container {
+    background:rgba(0, 0, 0, 0.9);
+}
