--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,3 +179,7 @@ section .container {
     background:rgba(0, 0, 0, 0.5);
     padding: 30px 0;
 }
+
+section .container h1 {
+    padding: 0 30px;
+}
