updated index.html and style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ body::before {
     #header:has(> div.container) {
         text-align: center;
     }
-    
+
     .navbar {
         display: none !important;
     }
@@ -91,23 +91,24 @@ body::before {
     overflow: hidden;
 }
 
-#header.header-top h2, #header.header-top span{
+#header.header-top h2,
+#header.header-top span {
     display: none;
 }
 
 #header.header-top h1 {
     margin-right: auto;
     font-size: 36px;
-  }
-  
-  #header.header-top .container {
+}
+
+#header.header-top .container {
     display: flex;
     align-items: center;
-  }
-  
-  #header.header-top .navbar {
+}
+
+#header.header-top .navbar {
     margin: 0;
-  }
+}
 
 
 /* Navbar */
@@ -173,13 +174,82 @@ section.section-show {
     bottom: auto;
     opacity: 1;
     padding-bottom: 45px;
-  }
+}
 
 section .container {
-    background:rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.9);
     padding: 30px 0;
+    border-radius: 1rem;
 }
 
 section .container h1 {
+    padding: 0 30px;
+    margin: 0;
+}
+
+.hr-lines {
+    position: relative;
+    padding-bottom: 10px;
+}
+
+.hr-lines::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 120px;
+    height: 1px;
+    background: #ddd;
+    bottom: 1px;
+    left: calc(50% - 60px);
+}
+
+.hr-lines::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 40px;
+    height: 3px;
+    background: var(--secondary);
+    bottom: 0;
+    left: calc(50% - 20px);
+}
+
+.profile-avatar {
+    width: 100%;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    padding-top: 30px;
+}
+
+.col {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+}
+
+.col-sm {
+    display: flex;
+    padding-left: 30px;
+    width: 33.33%;
+}
+
+/*--------------------------------------------
+    About Section
+--------------------------------------------*/
+
+.about-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 1;
+}
+
+.about-row h3 {
     padding: 0 30px;
 }
